refactor: Clean up build.gradle.kts and configuration files for improved readability